# llm_for_videofiles

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml  start.bat  start.sh
backend/app/: config.py  main.py
backend/app/api/: routes.py  schemas.py
backend/app/db/: sqlite.py
backend/app/embeddings/: providers.py
backend/app/llm/: providers.py
backend/app/parsers/: srt.py
backend/app/services/: ffmpeg_runtime.py  indexing.py  progress.py  secrets.py  topics.py  transcription.py  video_media.py
backend/app/utils/: hashing.py  platform.py  timecode.py
backend/app/vectorstore/: sqlite_vector.py
electron/: ensure-electron.cjs  main.cjs  preload.cjs  python-runtime.cjs  run-builder.cjs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  styles.css  vite-electron.d.ts
launcher/: index.html
scripts/: build_portable.py  build_python_bundle.py  launcher.py
